--- a/templates/components/footer.html
+++ b/templates/components/footer.html
@@ -1,7 +1,4 @@
-{% load static %}
 
-<footer class="footer-wrapper rounded my-4">
-    <div class="container">
-        <p class="text-end me-5">© Valentin Oliinykov, Kharkiv {% now "m.Y"%}</p>
-    </div>
-</footer>
+<div class="container">
+    <p class="text-end m-3">© Valentin Oliinykov, Kharkiv {% now "m.Y"%}</p>
+</div>
