--- a/static/styles.css
+++ b/static/styles.css
@@ -9,7 +9,6 @@ body {
     padding: 40px 40px 40px 40px;
     /* top, right, botom, left */
     background-color: rgb(148, 202, 238);
-    background-image: url("/static/images/background_forest.jpeg");
     background-repeat: space;
     background-position: center;
     background-attachment: fixed;
@@ -20,7 +19,7 @@ body {
 .main_wrapper {
   display: flex;
   /* flex-direction: row-reverse; */
-  background: white; /* var(--back_color); */
+  background: var(--back_color);
   width: var(--all_width);
   /*центрирование*/
   margin: 0 auto;
@@ -29,38 +28,23 @@ body {
 
 }
 
-.header-wrapper {
-  display: flex;
+.flex-col {
   flex-direction: column;
-  background: var(--back_color);
-  width: var(--all_width);
-  /*центрирование*/
-  margin: 0 auto;
-  /*рамка тень */
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-
 }
-
-.footer-wrapper{
-  display: flex;
+.flex-row {
   flex-direction: row;
-  background: var(--back_color);
-  width: var(--all_width);
-  /*центрирование*/
-  margin: 0 auto;
-  /*рамка тень */
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
-
 
 .back_color {
   background-color: var(--back_color);
 }
 
+.back_white {
+  background-color: white;
+}
 
-/* navbar */
-.nav_position {
-  margin: 10px 20px 0px 20px;
+.border_line {
+  border: 1px solid blue
 }
 
 .indent {
