--- a/templates/base.html
+++ b/templates/base.html
@@ -9,11 +9,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- preview in social -->
-<!--    <meta property="og:title" content="Python Back-End Developer Valentin Oliinykov">-->
-<!--    <meta property="og:site_name" content="Portfolio VO">-->
-<!--    <meta property="og:url" content="https://valoliin.onrender.com/">-->
-<!--    <meta property="og:description" content="My skils, experience and education">-->
-<!--    <meta property="og:image" content="{% static 'images/favicon_io/android-chrome-512x512.png' %}">-->
+    <!--    <meta property="og:title" content="Python Back-End Developer Valentin Oliinykov">-->
+    <!--    <meta property="og:site_name" content="Portfolio VO">-->
+    <!--    <meta property="og:url" content="https://valoliin.onrender.com/">-->
+    <!--    <meta property="og:description" content="My skils, experience and education">-->
+    <!--    <meta property="og:image" content="{% static 'images/favicon_io/android-chrome-512x512.png' %}">-->
     <!-- <meta property="og:image:width" content="" />
     <meta property="og:image:height" content="" /> -->
 
@@ -35,7 +35,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
-{% include "components/header.html" %}
+
+<header class="main_wrapper rounded my-4">
+    {# % include "components/header.html" % #}
+</header>
 
 <body>
     <div class="main_wrapper rounded my-4">
@@ -67,8 +70,9 @@
 
 </body>
 
-
-{% include "components/footer.html"%}
+<footer class="main_wrapper flex-row rounded my-4">
+    {% include "components/footer.html" %}
+</footer>
 
 
 </html>
