--- a/templates/comments/nodes/form_new_comment.html
+++ b/templates/comments/nodes/form_new_comment.html
@@ -1,4 +1,4 @@
-<div class="col">
+<div class="text-center col m-3">
     <h3 class="ms-3"> New comment </h3>
     <form id="myForm" method="post" class="form-insert">
         {% csrf_token %}
