--- a/templates/comments/nodes/form_new_comment.html
+++ b/templates/comments/nodes/form_new_comment.html
@@ -1,15 +1,17 @@
-<div class="text-center col m-3">
+<div class="container-fluid text-center col m-3">
     <h3 class="ms-3"> New comment </h3>
-    <form id="myForm" method="post" class="form-insert">
-        {% csrf_token %}
-        <table class="m-2">
-            {{ comment_form.as_table}}
-            <tr>
-                <td></td>
-                <td class="text-end m-2">
-                    <button type="submit" class="btn btn-primary">Submit</button>
-                </td>
-            </tr>
-        </table>
-    </form>
+    <div class="d-flex justify-content-center">
+        <form id="myForm" method="post">
+            {% csrf_token %}
+            <table class="m-2 text-center">
+                {{ comment_form.as_table }}
+                <tr>
+                    <td></td>
+                    <td class="text-end m-2">
+                        <button type="submit" class="btn btn-primary">Submit</button>
+                    </td>
+                </tr>
+            </table>
+        </form>
+    </div>
 </div>
