--- a/templates/base.html
+++ b/templates/base.html
@@ -30,6 +30,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="{% static '/images/favicon_io/favicon-16x16.png' %}"> -->
     <!-- <link rel="manifest" href="/images/favicon_io/site.webmanifest"> -->
 
+    <!--load font Monserrat-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
@@ -37,7 +38,7 @@
 
 
 <header class="main_wrapper rounded my-4">
-    {# % include "components/header.html" % #}
+    {% include "components/header.html" %}
 </header>
 
 <body>
