--- a/templates/comments/content.html
+++ b/templates/comments/content.html
@@ -41,95 +41,49 @@
         {% include 'comments/nodes/comment_view.html'%}
     {% endfor %}
     </div>
-    
 
-    <!-- nav paginator  -->
-    <div class="text-center">
-        {% if page.has_other_pages %}
-        {% if page.has_previous %}
-        <a href="?page={{page.previous_page_number}}"> &lt; </a>
-        &nbsp; | &nbsp;
-        {% endif %}
+    {% include 'comments/nodes/nav_paginator.html' %}
 
-        <span>Part {{ page.number }} from {{ page.paginator.num_pages }}</span>
-
-        {% if page.has_next %}
-        &nbsp; | &nbsp;
-        <a href="?page={{page.next_page_number }}"> &gt; </a>
-        {% endif %}
-        {% endif %}
+    {#% include 'comments/nodes/form_new_comment.html' %#}
+    <div class="container-fluid text-center col m-3">
+        <h3 class="ms-3"> New comment </h3>
+        <div class="d-flex justify-content-center">
+            <form id="rootForm" method="post">
+                {% csrf_token %}
+                <table class="m-2 text-center">
+                    {{ comment_form.as_table }}
+                    <tr>
+                        <td></td>
+                        <td class="text-center m-3">
+                            <button type="submit" class="btn btn-primary">Submit</button>
+                        </td>
+                    </tr>
+                </table>
+            </form>
+        </div>
     </div>
 
-    {% include 'comments/nodes/form_new_comment.html' %}
 
 </div>
 
 
+
 <script>
+    function setReplyForm(id){
+        // clean old form on page
+        if (document.contains(document.getElementById("replyForm"))) {
+            document.getElementById("replyForm").remove();}
+
+        var a = document.getElementById(id);     // get <div class="back_white m-2" id="{{ node.id }}"> from path comments/nodes/comment_view.html
+
+       $.get('/comments/replyfrom/'+id, function(response) {
+            a.insertAdjacentHTML('afterend', response)
+            });
+       }
 
     function closeForm() {
-        document.getElementById("newForm").remove();
-    }
-
-    function createReplyForm(id) {
-        // clean old form on page  
-        if (document.contains(document.getElementById("newForm"))) {
-            document.getElementById("newForm").remove();
-        }
-        /* get <div class="back_white m-2" id="{{ node.id }}"> from 
-        path comments/nodes/comment_view.html */
-        var a = document.getElementById(id);
-        // paste form in end of block-div
-        a.insertAdjacentHTML('afterend',
-
-            '<form id="newForm" class="form-insert" method="post"> \
-                {% csrf_token %} \
-            <table class="m-2">\
-            <tbody><tr>\
-            <th><label for="id_username">Username:</label></th>\
-            <td><input type="text" name="username" size="24" class="m-2" maxlength="50" required="" id="id_username"></td> \
-            </tr>\
-            <tr>\
-            <th><label for="id_email">Email:</label></th>\
-            <td><input type="email" name="email" size="24" class="m-2" maxlength="254" required="" id="id_email"></td>\
-            </tr>\
-            <tr>\
-            <th></th>\
-            <td>\
-            <select name="parent" class="d-none" id="id_parent">\
-            <option value="' + id + '" selected="' + id + '"></option>\
-            </select>\
-            </td>\
-            </tr>\
-            <tr>\
-            <th><label for="id_text">Text:</label></th>\
-            <td><textarea name="text" cols="24" rows="4"  class="m-2" required="" id="id_text"></textarea></td>\
-            </tr>\
-            <tr>\
-            <th><label for="id_url">Url:</label></th>\
-            <td><input type="url" name="url" size="24" class="m-2" maxlength="200" id="id_url"></td>\
-            </tr>\
-            <tr class="text-center">\
-                <th><label for="id_captcha_1">Enter captcha:</label></th>\
-                <td>\
-                <img src="{% url "captcha-image" key=ckey %}" alt="captcha" class="captcha">\
-                <input type="hidden" name="captcha_0" value="{{ckey}}" required="" id="id_captcha_0">\
-                <input type="text" name="captcha_1" size="8" required="" id="id_captcha_1" autocapitalize="none" autocomplete="off" autocorrect="off" spellcheck="false">\
-                </td>\
-            </tr>\
-            <tr><td></td>\
-            <td> \
-            <p class="d-flex justify-content-between m-2">\
-                <button type="submit" class="btn btn-primary">Submit</button>\
-                <button type="button" class="btn btn-outline-secondary" onclick="closeForm()">Close</button>\
-            </p> \
-            </td> \
-            </tr>\
-            </tbody>\
-            </table>\
-            </form>');
+        document.getElementById("replyForm").remove();
     }
 
 </script>
-
 {% endblock %}
