--- a/templates/comments/nodes/form_new_comment.html
+++ b/templates/comments/nodes/form_new_comment.html
@@ -1,14 +1,17 @@
-<div class="container-fluid text-center col m-3">
-    <h3 class="ms-3"> New comment </h3>
+<div id="replyForm"  class="container-fluid text-center col m-3">
+    <h3 class="ms-3"> Reply </h3>
     <div class="d-flex justify-content-center">
-        <form id="myForm" method="post">
+        <form method="post">
             {% csrf_token %}
             <table class="m-2 text-center">
                 {{ comment_form.as_table }}
                 <tr>
                     <td></td>
                     <td class="text-end m-2">
-                        <button type="submit" class="btn btn-primary">Submit</button>
+                        <p class="d-flex justify-content-between m-2">
+                            <button type="submit" class="btn btn-primary">Submit</button>
+                            <button type="button" class="btn btn-outline-secondary" onclick="closeForm()">Close</button>
+                        </p>
                     </td>
                 </tr>
             </table>
