--- a/templates/components/header.html
+++ b/templates/components/header.html
@@ -1,6 +1,6 @@
 
 <div class="container-fluid row m-2">
-    <h3 class="ms-3 mb-0 col">Messanger</h3>
+    <h3 class="ms-3 mb-0 col">Messanger {{user.username}}</h3>
     <div class="col d-flex justify-content-end">
         {% if user.is_authenticated %}
         <a href="{% url 'users:logout' %}">
