--- a/templates/comments/content.html
+++ b/templates/comments/content.html
@@ -18,6 +18,7 @@
     </p>
     <p class="text-end mx-5">
         Max main messages on page: {{count_main}} <br>
+        Root messages: {{zero_count}} <br>
         Now messages with comments: {{count_all}}
     </p>
 
