--- a/templates/comments/content.html
+++ b/templates/comments/content.html
@@ -48,6 +48,7 @@
             <form id="rootForm" method="post">
                 {% csrf_token %}
                 <table class="m-2 text-center">
+                    <tr>In field 'text' you can use tags: &ltbr&gt, &lti&gt, &ltstrong&gt, &ltcode&gt, &lta href=&quot&quot&gt</tr>
                     {{ comment_form.as_table }}
                     <tr>
                         <td></td>
@@ -59,11 +60,7 @@
             </form>
         </div>
     </div>
-
-
 </div>
-
-
 
 <script>
     function setReplyForm(id){
