--- a/templates/comments/nodes/form_new_comment.html
+++ b/templates/comments/nodes/form_new_comment.html
@@ -4,6 +4,7 @@
         <form method="post">
             {% csrf_token %}
             <table class="m-2 text-center">
+                <tr>In field 'text' you can use tags: &ltbr&gt, &lti&gt, &ltstrong&gt, &ltcode&gt, &lta href=&quot&quot&gt</tr>
                 {{ comment_form.as_table }}
                 <tr>
                     <td></td>
