--- a/templates/users/register.html
+++ b/templates/users/register.html
@@ -9,6 +9,10 @@
             <table>
                 {{ form.as_table }}
                 <tr>
+                    <th>{{ form.username.label }}</th>
+                    <td>{{ form.username}}</td>
+                </tr>
+                <tr>
                     <th></th>
                     <td><button type="submit" class="btn btn-primary">Register</button></td>
                 </tr>
